...
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center_horizontal">

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_play"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:backgroundColor="#80ff8080"
                app:iconDrawable="@drawable/action_game"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_quiz"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="56dp"
                app:backgroundColor="#8020e8ca"
                app:iconDrawable="@drawable/action_quiz"
...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_about"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="64dp"
                app:backgroundColor="#8040b5ff"
                app:iconDrawable="@drawable/action_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteY="0dp" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_no_ads"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="36dp"
                app:backgroundColor="#8040b5ff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_recommended"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="72dp"
                app:backgroundColor="#80039d76"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kidscademy.quiz.view.HexaIcon
                android:id="@+id/main_share"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="110dp"
                app:backgroundColor="#8053acb6"
                app:iconDrawable="@drawable/action_share"
                app:layout_constraintStart_toStartOf="parent"
...
