<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/compo_page_background" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/levels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            tools:context="com.kidscademy.quiz.unit.com.kidscademy.instruments.quiz.LevelsActivity"
            tools:listitem="@layout/compo_card_level">

        </android.support.v7.widget.RecyclerView>

    </FrameLayout>

    <com.kidscademy.quiz.view.RandomColorFAB
        style="@style/FAB.Back.Autohide"
        app:layout_anchor="@id/levels" />

</android.support.design.widget.CoordinatorLayout>