...
    <string name="main_game">Game</string>
    <string name="main_quiz">Quiz</string>
    <string name="main_logo">Logo</string>
    <string name="main_brand">Brand</string>
    <string name="main_country">Country</string>
    <string name="main_year">Year</string>
    <string name="main_score">Score</string>

    <dimen name="main_section_margin">20dp</dimen>
    <dimen name="main_icon_size">64dp</dimen>
    <dimen name="main_text_left">40dp</dimen>
    <dimen name="main_text_top">10dp</dimen>
    <dimen name="main_text_padding">4dp</dimen>
...
